# weather

./: .gitignore  go.mod  go.sum  readme.md
golang/: main.go
golang/views/: stats.html
rust/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
rust/assets/: main.css
rust/src/: main.rs  users.rs  utils.rs
rust/templates/: base.html  index.html  stats.html  weather.html
