[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
# web framework
axum = "0.6.20"
axum-macros = "0.4.0"
base64 = "0.21.5"
# async HTTP client
reqwest = { version = "0.11.20", features = ["json"] }
# serialization/deserialization  for JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# database access
sqlx = { version = "0.7", features = [
	"runtime-tokio-rustls",
	"macros",
	"any",
	"postgres",
] }
# async runtime
tokio = { version = "1.32.0", features = ["full"] }
